--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <a href="index.html"><img src="./assets/images/logo-ever.png" alt="Ever Joung logo"></a>
           <!--Here is the markup for the mobile toggling buttons and aria here is because of the screen reader-->
           <button class=" mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
-            <img class=" icon-hamburger" src="./images/icons8-medium-icons-24.png" alt="" aria-hidden="true">
-            <img class="icon-close" src="./images/icons8-stornieren.svg" alt="" aria-hidden="true">
+            <img class=" icon-hamburger" src="./assets/images/icon-open.png" alt="" aria-hidden="true">
+            <img class="icon-close" src="./assets/images/icon-close.png" alt="" aria-hidden="true">
           <!--This is to hide the menu visible-->
             <span class="visually-hidden">menu</menu></span>
           </button>
@@ -39,7 +39,7 @@
               <li><a href="signup.html" aria-label="Go to the contact page and signup">Contact Us</a></li>
             </ul>
           </nav>
-          <button class="button | display-sm-none display-md-inline-flex">Signup</button>
+          <button class="button | display-sm-none display-md-inline-flex"> <a href="./signup.html"> Signup</a></button>
         </div>
       </div>
     </header>
@@ -55,7 +55,7 @@
               <p clas="fs-300">Ever young</span> site is for visitors who want to remain ever young,<br>
                 (anti-aging) or want to prevent premature ageing , heal themselves with
                 organic means and natural products.</p>
-              <button class="button">More info</button>
+              <button class="button"><a href="./signup.html">More info</a></button>
             </div>
             <div>
               <img src="./assets/images/main-bg.png" alt="" class="padding-block-900" id="main-img" >
@@ -77,16 +77,16 @@
               <p><span> Ever young</span> customers get a first hand advice or recomendation
                 of products through our team. We don't just tell you what you should take
                 or do but show you how to do it. At Ever young we have both young and ages as customers.</p>
-              <button class="button">Read more</button>
+              <button class="button"><a href="./signup.html">Read more</a></button>
             </div>
             <div class="flow text-center-sm-only margi">
-              <img src="./assets/images/go organic1.png">
+              <img src="./assets/images/go-organics.png">
               <h2 class="fw-bold">Go organic and Nature</h2>
               <p><span>Ever Young</span> had help so many people in reducing their risk of
                 of cancer, heart attack, or promote their youthfullness by follwing
                 simple instructions on how to mix or
                 blend one or more products</p>
-              <button class="button">Read more</button>
+              <button class="button"><a href="./signup.html">Read more</a></button>
             </div>
             <div class="flow text-center-sm-only margi">
               <img src="./assets/images/supplement-sppon.png">
@@ -94,7 +94,7 @@
               <p><span>It is best Practice </span>to supplement your meal or food you eat
                 due to the fact that we cannot get all the nuritents required in a given meal.
                 There are supplement products we recommend.....</p>
-              <button class="button">Read more</button>
+              <button class="button"><a href="./signup.html"> Read more</a></button>
             </div>
           </div>
         </div>
@@ -108,9 +108,9 @@
             <div>
               <p class="fs-secondary-heading fw-bold text-center ">Invest in your health.</p>
             </div>
-            <div class="justify-self-end-md" style="margin-right: 30%;">
-              <button class="button" id="button-white" data-type="inverted" a href=”tel:+4915214039314″></a>call Us at
-                +491-5214-039-314
+            <div class="justify-self-end-md" style="margin-right: 20%;">
+              <button class="button" id="button-white" data-type="inverted" ><a href= "tel:+4915214039314" style="color: brown;">call Us at
+                +491-5214-039-314</a>
               </button>
             </div>
           </div>
@@ -140,11 +140,14 @@
             </ul>
           </div>
           <div>
+            
             <nav class="footer-nav">
               <ul>
                 <li><a href="index.html"aria-label="Go to the top page">Home</a></li>
                 <li><a href="blog.html"aria-label="Go to the Blog page">blog</a></li>
                 <li><a href="signup.html" aria-label="Go to the contact page and signup">Contact Us</a></li>
+
+                <!-- These below are useful links that help me alot- I also encourage you to go through them-->
                 <li><a href="https://stackoverflow.com/" target="_blank" rel="noopener"
                     aria-label="Visit stackoverflow page (opens in a new tab)"> Stack overflow</a>
                 </li>
