Fix: Media query for blog page at 320px

--- a/blog.html
+++ b/blog.html
@@ -78,9 +78,11 @@
           <div class="blog">
             <img src="./assets/images/coco.jpg" alt="coconut picture">
           </div>
+          <div class="blog-text">
           <h3>Coconut Oil</h3>
           <p> It's full of fatty acids that your body needs and may help improve cognitive function, metabolism, and
             hair and skin health </p>
+          </div> 
         </div>
 
 
@@ -88,12 +90,14 @@
           <div class="blog-column">
             <div class="blog">
               <img src="./assets/images/alover-gel.jpg">
-            </div>
-            <h3>Alovera Gel</h3>
-            <p> Alovera Gel contains vitamins, antioxidants, and other properties that can help with mild and severe
+            </div >
+            <div class="blog-text">
+            <h3 class="blog-h2">Alovera Gel</h3>
+            <p class="blog-p"> Alovera Gel contains vitamins, antioxidants, and other properties that can help with mild and severe
               health issues. You can relieve several issues
               just by applying or drinking aloe vera juice.
               .</p>
+            </div>
           </div>
         </div>
 
@@ -102,8 +106,10 @@
             <div class="blog">
               <img src="./assets/images/loss-wght.jpg">
             </div>
+            <div class="blog-text">
             <h3>Tips for weight loss at home</h3>
             <p> Some of tips are Do intermitent Fasting, eat 80% of fruit and vegetable, be Active ..</p>
+          </div>
           </div>
 
 
@@ -112,9 +118,11 @@
               <div class="blog">
                 <img src="./assets/images/lemon-green.png">
               </div>
+              <div class="blog-text">
               <h3>Resons to take lemon Juice</h3>
               <p> Lemons are a good source of Vitamin C, which promotes immunity, battles infection, heals wounds, stop
                 oxidation and more </p>
+            </div>
             </div>
           </div>
 
@@ -124,9 +132,11 @@
               <div class="blog">
                 <img src="./assets/images/carrot.png">
               </div>
+              <div class="blog-text"> 
               <h3>Health benefit of carrot</h3>
               <p> It contain vitamins A, C, and K. It help to improve eye health, boost your immune system, and
                 strengthen your skin and more- </p>
+              </div>
             </div>
 
 
@@ -135,9 +145,11 @@
                 <div class="blog">
                   <img src="./assets/images/stone-feets.jpg">
                 </div>
+                <div class="blog-text">
                 <h3>Walking on the stone</h3>
                 <p> Walking barefoot on stones has so many health benefit, such as less tension , reduce body pain ,
                   reduce dizzines. lower blood pressure amd more</p>
+                </div>
               </div>
             </div>
 
@@ -147,8 +159,10 @@
                 <div class="blog">
                   <img src="./assets/images/girl-pic.jpg" class="testimony-img">
                 </div>
+                <div class="blog-text">
                 <h3>'Margreete'</h3>
                 <p>lemon juice reduce my coughing. Thanks</p>
+              </div>
               </div>
 
 
@@ -157,8 +171,10 @@
                   <div class="blog">
                     <img src="./assets/images/woman2-pc.png" class="testimony-img">
                   </div>
+                  <div class="blog-text">
                   <h3>'chimdalu'</h3>
                   <p> wakling on the stone heal my dizzines. Thanks</p>
+                 </div>
                 </div>
 
                 <div class="blog-row">
@@ -166,8 +182,10 @@
                     <div class="blog">
                       <img src="./assets/images/man-pc.png" class="testimony-img">
                     </div>
+                    <div class="blog-text">
                     <h3>'Mark'</h3>
                     <p> Your recommendation work for me, thanks</p>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -232,6 +250,8 @@
 
             <!---fontawsone kit--->
             <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
+            <script src="./assets/main.js"></script>
+
 
   </body>
 
