--- a/signup.html
+++ b/signup.html
@@ -48,7 +48,7 @@
   <!--Here end the makeup for the Nav element-->
     <section class="form-section">
       <form action="thank-you.html" class="signup-form">
-        <h2>Let's be in contact!<i class="fas fa-heartbeat"></i></h2>
+        <h2>Let's be in contact!</h2>
         <label for="fname">First Name</label>
         <input id="fname" name="first_name" type="text" class="text-input" required>
   
@@ -68,7 +68,7 @@
         <textarea id="msg" rows="5" cols="40" name="comment" form="usrform">
                comment here...</textarea>
   
-        <input class="form-button" type="submit" value="submit!">
+        <input class="button" type="submit" value="submit!">
       </form>
     </section>
   
@@ -129,6 +129,8 @@
 
             <!---fontawsone kit--->
             <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
+            <script src="./assets/main.js"></script>
+
 
   </body>
 
