--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 
             <!---fontawsone kit--->
             <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
+            <script src="./assets/main.js"></script>
 
   </body>
 
